<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="bottomNavigationView">

    <item
        android:id="@+id/shopFragment"
        android:icon="@drawable/selector_ic_store"
        android:title="@string/shop" />

<!--    <item-->
<!--        android:id="@+id/storesFragment"-->
<!--        android:icon="@drawable/selector_ic_shopping_bag"-->
<!--        android:title="@string/stores" />-->

<!--    <item-->
<!--        android:id="@+id/brandsFragment"-->
<!--        android:icon="@drawable/selector_ic_tag_alt"-->
<!--        android:title="@string/brands" />-->

    <item
        android:id="@+id/recipesFragment"
        android:icon="@drawable/ic_line_restaurant"
        android:title="@string/recipes" />

    <item
        android:id="@+id/familyBondFragment"
        android:icon="@drawable/ic_family_knot"
        android:title="@string/family_bond" />

    <item
        android:id="@+id/ordersFragment"
        android:icon="@drawable/ic_line_receipt"
        android:title="@string/orders" />

<!--    <item-->
<!--        android:id="@+id/favoritesFragment"-->
<!--        android:icon="@drawable/selector_ic_heart"-->
<!--        android:title="@string/favorites" />-->
    <item
        android:id="@+id/accountFragment"
        android:icon="@drawable/selector_ic_user"
        android:title="@string/account" />

</menu>