<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph.xml"
    app:startDestination="@id/shopFragment">

    <fragment
        android:id="@+id/shopFragment"
        android:name="com.batache.dokany.app.shop.ShopFragment"
        android:label="@string/shop"
        tools:layout="@layout/fragment_shop" />
    <!--    <fragment-->
    <!--        android:id="@+id/storesFragment"-->
    <!--        android:name="com.batache.dokany.app.shop.stores.StoresFragment"-->
    <!--        android:label="Stores"-->
    <!--        tools:layout="@layout/fragment_stores" />-->
    <fragment
        android:id="@+id/recipesFragment"
        android:name="com.batache.dokany.app.recipes.RecipesFragment"
        android:label="@string/recipes"
        tools:layout="@layout/fragment_recipes" />
    <fragment
        android:id="@+id/familyBondFragment"
        android:name="com.batache.dokany.app.family_bond.FamilyBondFragment"
        android:label="@string/family_bond"
        tools:layout="@layout/fragment_family_bond" />
    <fragment
        android:id="@+id/ordersFragment"
        android:name="com.batache.dokany.app.orders.OrdersFragment"
        android:label="@string/orders"
        tools:layout="@layout/fragment_orders" />
    <!--    <fragment-->
    <!--        android:id="@+id/favoritesFragment"-->
    <!--        android:name="com.batache.dokany.app.favorites.FavoritesFragment"-->
    <!--        android:label="Favorites"-->
    <!--        tools:layout="@layout/fragment_favorites" />-->
    <fragment
        android:id="@+id/accountFragment"
        android:name="com.batache.dokany.app.account.AccountFragment"
        android:label="@string/account"
        tools:layout="@layout/fragment_account" />

</navigation>