<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/rootView"
    android:layout_height="match_parent"
    tools:background="#fafafa"
    tools:context=".app.cart.CartActivity">

    <include layout="@layout/app_bar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contentCl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/emptyCartLl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#fafafa"
            android:gravity="center"
            android:orientation="vertical"
            tools:visibility="visible"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/empty_cart"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="#828286"
                android:textSize="24sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/continueShoppingBtn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/continue_shopping" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="230dp"
                app:srcCompat="@drawable/empty_cart" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.airbnb.epoxy.EpoxyRecyclerView
                android:id="@+id/cartProductsRv"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toTopOf="@id/checkoutContainer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:itemCount="4"
                tools:listitem="@layout/model_cart_product" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/checkoutContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardElevation="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.Dokany.CartCheckout">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="16dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/subtotal"
                        android:textAppearance="?attr/textAppearanceBody1"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toStartOf="@id/cartSubtotalTv"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.batache.dokany.view.PriceTextView
                        android:id="@+id/cartSubtotalTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:textAppearance="?attr/textAppearanceSubtitle2"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="45,000 LBP" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/checkoutBtn"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/check_out"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/cartSubtotalTv" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:textAppearance="?attr/textAppearanceCaption"
                        android:text="@string/delivery_will_be_calculated_at_checkout"
                        app:layout_constraintTop_toBottomOf="@id/checkoutBtn" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>